# atat_backend

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Dockerfile-base  Jenkinsfile  Makefile  README.md  __init__.py  atat.sql  celery_app.py  config.py  deployment.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run.py  runapi.py  setup.py  wsgi.py
.docker/: configuration.yaml  namespace.yaml
.docker/.atat/: deployment.yaml  initscripts.yaml  service.yaml
.docker/.mongodb/: .dbshell  deployment.yaml  service.yaml
.docker/.rabbitmq/: deployment.yaml
.docker/.workers/: deployment.yaml
.docker/init-scripts/: mongo-init.sh  mongo_atat_results.sh  mongo_rabbitmq_backend.sh
.github/workflows/: deploy.yaml  main.yml  python_test.yml
.kubernetes/: rabbitmq.yaml
.kubernetes/.atat/: deployment.yaml  service.yaml
.setup/: setup.sh
api/: job_queries.py  json_serializer.py  run.py
app/: __init__.py  app.py  app2.py  atat.py  config.py  controllers.py  datatypes.py  hunana.py  jobManagement.py  plot.py  preprocess.py  sendNotification.py  submitJob.py  viewResult.py  viewStatus.py  views.py
atat/: celery_app.py  settings.py
atat_backend/: celery_app.py  settings.py
dashboard/: __init__.py  constants.py  endpoint.py  endpoint2.py
deployment/: deployment.yaml
models/: __init__.py  models.py
tasks/: __init__.py  atat.py  constants.py  hunana.py  hunana_reservoir.py  hunana_source.py  job.py  logging.py  warehousing.py
tests/: test_analyses.py  test_job.py  test_position.py
viva_atat/: celery_app.py  settings.py
(+160 files in other folders)
