[tool.poetry]
name = "atat_backend"
version = "0.1.0"
description = "The Antigenic Transmissibility Analysis Tool of the ViVA project."
authors = ["Shan Tharanga <stwm2@student.london.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
dima-cli = "^2.0.3"
celery = "^5.1.2"
mongoengine = "^0.23.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
