[tool.poetry]
name = "viva_atat"
version = "0.1.0"
description = "The Antigenic Transmissibility Analysis Tool of the ViVA project."
authors = ["Shan Tharanga <stwm2@student.london.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
dima-cli = "^2.1.0"
celery = "^5.1.2"
mongoengine = "^0.23.1"
fastapi = "^0.68.1"
pydantic = "^1.8.2"
uvicorn = "^0.15.0"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.15.0"
python-dotenv = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
setup = 'setup:main'

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py38']
include = '''
/(
    \.pyi?$
  | \.pyt?$
)/
'''
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
